--- a/celerytst/docker-compose.yml
+++ b/celerytst/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.9'
 
 services:
   db:
+    container_name: postgres
     image: postgres:15
     volumes:
       - postgres_data:/var/lib/postgresql/data/
@@ -13,11 +14,13 @@ services:
       - "5432:5432"
 
   redis:
+    container_name : redis
     image: redis:7
     ports:
       - "6379:6379"
 
   web:
+    container_name: django
     build: .
     command: >
       sh -c "python3 manage.py migrate &&
@@ -31,7 +34,6 @@ services:
       - redis
     environment:
       - DEBUG=1
-      - DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
       - DATABASE_NAME=mydb
       - DATABASE_USER=myuser
       - DATABASE_PASSWORD=mypassword
@@ -40,15 +42,26 @@ services:
       - CELERY_BROKER_URL=redis://redis:6379/0
 
   celery:
+    container_name: celery1
     build: .
-    command: celery -A celerytst worker --loglevel=info
+    command: celery -A celerytst worker --loglevel=info -Q queue1
     volumes:
       - .:/app
     depends_on:
       - web
       - redis
-    environment:
-      - CELERY_BROKER_URL=redis://redis:6379/0
+
+  celery2:
+    container_name: celery2
+    build:
+      context: ../celeryworker
+      dockerfile: Dockerfile
+    command: celery -A celerytask worker --loglevel=info -Q queue2
+    volumes:
+      - ../celeryworker:/app
+    depends_on:
+      - web
+      - redis
 
 volumes:
   postgres_data:
