--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -73,6 +73,15 @@ services:
       - 5672:5672
       - 15672:15672
 
+  flower:
+    container_name: flower
+    image: mher/flower
+    ports:
+      - 5555:5555
+    environment:
+      - "CELERY_BROKER_URL=amqp://guest:guest@rabbitmq:5672"
+
+
 
 volumes:
   postgres_data:
