--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ click-plugins==1.1.1
 click-repl==0.3.0
 Django==5.2
 kombu==5.5.2
+DateTime==5.5
 pika==1.3.2
 prompt_toolkit==3.0.50
 python-dateutil==2.9.0.post0
